# DCIScorePuller

./: .gitignore  .pylintrc  README.md  makefile  manage.py  pyproject.toml  requirements.txt
.github/workflows/: django.yml
DCIScorePuller/: settings.py  urls.py  views.py  wsgi.py
DCIScorePuller/DCIScorePuller/: asgi.py  settings.py  urls.py
DCIScorePuller/pull/: admin.py  apps.py  filters.py  models.py  tables.py  tests.py  urls.py  views.py
DCIScorePuller/pull/migrations/: 0001_initial.py
DCIScorePuller/pull/static/pull/: main.css
DCIScorePuller/pull/templates/pull/: about.html  admin.html  base.html  chart_competition.html  chart_rank.html  chart_test.html  home.html
DCIScorePuller/pull/utils/: puller.py
DCIScorePuller/users/: forms.py  models.py  views.py
DCIScorePuller/users/templates/users/: login.html  password_reset_done.html  profile.html
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_rename_key_post_id_postlike_postcomment.py  0003_rename_likes_post_like_count_post_user_likes_and_more.py  0004_alter_post_user_likes.py  0005_remove_post_like_count.py  0006_post_user_comments.py  0007_alter_post_date.py  0008_remove_post_comments.py  0009_rename_date_post_created_date_post_last_updated_date.py  0010_postcomment_comment.py  0011_rename_created_postlike_created_date_and_more.py
blog/templates/blog/: create_post.html  home.html  update_comment.html  update_post.html  view_post.html
blog/templatetags/blog/: extra_blog_tags.py
pull/: admin.py  filters.py  models.py  tables.py  tests.py  urls.py  views.py
pull/migrations/: 0001_initial.py
pull/static/pull/: main.css  main.js
pull/templates/pull/: about.html  admin.html  base.html  chart_competition.html  chart_rank.html  home.html  show_table.html  welcome.html
pull/templatetags/pull/: chart_rank_tags.py
pull/utils/: puller.py
users/: forms.py  models.py  views.py
users/migrations/: 0001_initial.py  0002_alter_profile_image.py
users/templates/migrations/: 0001_initial.py
users/templates/users/: logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  profile.html  register.html
