[tool.poetry]
name = "dciscorepuller"
version = "0.0.01"
description = "A Django Site to scrape scores for DCI competitions, providing table and chart views of these scores / competitions."
authors = ["Ethan Christensen <ethanlchristensen@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests= "^2.28.2"
python-dotenv = "^1.0.0"
Django = "^4.2.3"
django-autocomplete-light = "^3.9.7"
django-bootstrap-v5 = "^1.0.11"
django-bootstrap5 = "^23.3"
django-crispy-forms = "^2.0"
django-filter = "^23.2"
django-tables2 = "^2.6.0"
crispy-bootstrap5 = "^0.7"
Pillow = "^9.4.0"
pytest-django = "^4.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
